@startuml
'https://plantuml.com/class-diagram
hide circle

title Domain Model

class Administrator{
    username: Username
    password: Password
}
class Patient {
    - patientID: int
    - name: Name
    - email: Email
    - dateOfBirth: DateOfBirth
    - phoneNumber: PhoneNumber
    - insuranceInfo: InsuranceInfo
    - dataConsent: DataConsent
}

class InsuranceInfo {
 - policyNumber: int
 - companyName: string
}
class DataConsent  {
 - consentGiven : boolean
 - date : datatime

}
class  Physician {
   - physicianID : int
   - name : Name
   - specialty: Specialty
   - contactInfo: ContactInfo
   - workingHours: WorkingHours
}


class ContactInfo  {
  - email:Email
  - mobilePhones: mobilePhones
  -address: Adress
}

class Address <<Value Object>> {
  -street: Street
  -doorNumber : DoorNumber
  -postalCode : PostalCode
  -locality : Locality
  -district : District
}

class Street <<Value Object>> {
-street:string
}


class DoorNumber <<Value Object>> {
-doorNumber: int
}

class PostalCode <<Value Object>> {
-postalCode: string
}

class Locality <<Value Object>> {
-locality: string
}

class District <<Value Object>> {
-district: string
}

class WorkingHours <<Value Object>> {
  -startTime:datatime
  -endTime: datatime
}

class mobilePhones <<Value Object>>{
    -PhoneNumber
    -PhoneType:enum
}

class PhoneNumber <<Value Object>>{
    phoneNumber:int

}

'class PhoneType <<Value Object>>{
 '   phoneType: enum
'}

class Appointments{
           -appointmentId: int
           -date : timestamp
           -time
           -consultationType: enum
           -diagnosis: string
           -treatment: string
           -recommendations : string
           -prescriptions : string
           -status: enum
       }
Administrator  --  Physician
Administrator -- Appointments

Patient    *--  InsuranceInfo
Patient "1" *-- "1  " DataConsent

Physician  -- Patient

Physician  *--  ContactInfo
ContactInfo  *-- Address
ContactInfo  *--  mobilePhones

Physician  *--  WorkingHours

mobilePhones *-- PhoneNumber
'mobilePhones *-- PhoneType

Address *-- Street
Address *-- DoorNumber
Address *-- PostalCode
Address *-- Locality
Address *-- District




@enduml

